fix: footer overflow + mobile menu scroll

--- a/components/footer/styles.css
+++ b/components/footer/styles.css
@@ -9,7 +9,7 @@ footer {
 
 .footer-container-top {
     width: 100%;
-    max-width: 1000px;
+    max-width: 800px;
     height: 200px;
     margin: 0 40px 0 40px;
     box-sizing: border-box;
@@ -44,7 +44,7 @@ footer {
 }
 
 .footer-link {
-    margin: 22px;
+    margin: 14px;
     font-family: "Wotfard-Regular";
     color: var(--color-path);
 }
